adopt changes for reading files introduced in Jenkins 2.346
see also #138